fix(ui): layout on mobile view for property details

--- a/public/sass/base/_button.scss
+++ b/public/sass/base/_button.scss
@@ -107,7 +107,7 @@ button {
     align-items: center;
     justify-content: center;
     text-align: center;
-    white-space: nowrap;
+    // white-space: nowrap;
     padding: 8px 14px;
   }
   &-input {
